MT14: Made a lot of changes, did my best to fixt the nav sizing issue on index.html, nav text now sizes responsively on mobile and larger screens, changed the mobile nav to open from the top and take up the entire screen, added in new colors to html, added new cta1 background and made it responsively size, for some reason the nav waffel does not show up on the ipad pro but it works fine in iphone and devtools

--- a/styles/mobile-test.css
+++ b/styles/mobile-test.css
@@ -13,6 +13,7 @@
     --clr-dark-blue: 216 80% 20%;
     --clr-light-blue: 199 100% 43%;
     --clr-red: 347 83% 55%;
+    --clr-light-gray: 216 31% 94%;
 
     --ff-primary: 'Roboto', sans-serif;
     --ff-heading: 'Oswald', sans-serif;
@@ -137,7 +138,16 @@ p {
     max-width: 34rem;
 }
 
+.call-to-action-1{
+    background-image: url(../images/new-beach.jpg);
+    background-position: center center;
+    background-attachment: scroll;
+    background-size: cover;
+    height: 78.5vh;
+    display: flex;
+    align-items: center;
 
+}
 /* consider removing this and adding it tot he call-to-action-1 class and 2 class that already exists */
 .container--cta {
     max-width: 19rem;
@@ -243,6 +253,7 @@ footer {
 .bg-dark-blue { background-color: hsl( var(--clr-dark-blue) );}
 .bg-light-blue { background-color: hsl( var(--clr-light-blue) );}
 .bg-red { background-color: hsl( var(--clr-red) );}
+.bg-light-gray { background-color: hsl( var(--clr-light-gray) );}
 
 .text-dark { color: hsl( var(--clr-dark) );}
 .text-gray { color: hsl( var(--clr-gray) );}
@@ -260,7 +271,7 @@ footer {
 
 /* Ask Charles about this... look it up */
 /* https://medium.com/the-coders-guide-to-javascript/css-background-images-for-mobile-225317f1d083 */
-/* .retire-bg-container {
+/* .retire-bg {
     background-image: url(../images/beach-retire-centered.png);
     background-position: top center;
     background-attachment: scroll;
@@ -296,14 +307,14 @@ body{
 /* primary header */
 /* Following Kevin Powell */
 .logo {
-    /* margin: 1rem; */
-    max-width: 10rem;
-    min-width: 10rem;
+    margin: 0.3rem;
+    max-width: 7rem;
+    min-width: 7rem;
 }
 
 .logo img {
     max-width: 100%;
-    max-height: auto;
+    /* max-height: auto; */
     display: block;
 }
 
@@ -325,7 +336,9 @@ body{
     list-style: none;
     padding: 0;
     margin: 0;
-    background: hsl(0 0% 0% / 0.5);
+    /* background: hsl(0 0% 0% / 0.5); */
+    background: hsl( var(--clr-light-gray) );
+
 }
 /* If @supports doesnt work, it defaults to the above^ */
 
@@ -334,39 +347,48 @@ body{
  /* Backdrop filter is not supported on firefox so it defaults to line 211 .primary navigation background above */
 @supports (backdrop-filter: blur(1rem)) {
     .primary-navigation {
-        background: hsl(0 0% 100% / 0.1);
+        /* background: hsl(0 0% 100% / 0.1); */
+        background: hsl( var(--clr-white) / 0.15);
         backdrop-filter: blur(0.5rem);
     }
+}
+
+.primary-navigation li:hover {
+    text-decoration: underline;
 }
 
 .primary-navigation a {
     text-decoration: none;
     /* color: #fff; */
     color: var(--clr-dark);
-    font-size: 2rem;
+    /* this used to be 3rem */
+    font-size: clamp(1.8rem, 3vw, 3rem);
 }
 
-
 /* This is the mobile nav media query, kevin powell uses max-width for nav media queries */
-@media (max-width: 35em) { 
+/* this used to be 50... change back */
+@media (max-width: 40em) { 
     /* Kevin arbitrarily uses 35em above, I might need to change it to fit my project */
     .primary-navigation {
         --gap: 3em;
 
         position: fixed;
+        /* height: 70vh; */
         z-index: 1000;
-        inset: 0 0 0 30%;
+        inset: 0 0 0 0%;
 
         flex-direction: column;
-        padding: min(30vh, 10rem) 2rem;
+        padding: min(30vh, 4rem) 2rem;
         /* This padding is explained at the 14 minute mark */
 
-        transform: translateX(100%);
-        transition: transform 350ms ease-out;
+        transform: translateY(-100%);
+        transition: transform 150ms ease-out;
+        /* visibility: hidden; */
     }
 
     .primary-navigation[data-visible="true"] {
-        transform: translateX(0%);
+        transform: translateY(0%);
+        /* visibility: visible; */
     }
     /* see comment in html for explanation of data-visible */
 
@@ -375,7 +397,7 @@ body{
         position: absolute;
         z-index: 9999;
         background-color: transparent;
-        background-image: url("../menu_white_24dp.svg");
+        background-image: url("../menu_black_24dp.svg");
         /* consider putting this svg into the actual html because it seems like it is difficult to style it this way */
         background-size: 75%;
         background-repeat: no-repeat;
@@ -387,19 +409,28 @@ body{
     }
 
     .mobile-nav-toggle[aria-expanded="true"] {
-        background-image: url("../close_white_24dp.svg");
+        background-image: url("../close_black_24dp.svg");
     }
+    /* MY WAFFLE  */
+
+
     /* not sure if I set up the ari-expanded properly for screen readers, revisit kevin powell navbar video */
 }
 
 /* This is the large screen media query, kevin powell uses min-width for these */
 /* for some reason this shrinks my logo...figure this out! ... I fixed this by putting a min-width on the .logo above*/
 /* now that I fixed logo, my nav gets cut off on the right size when resizing my screen smaller */
-@media (min-width: 35em) {
+/* this used to be 35em */
+@media (min-width: 40em) {
     .primary-navigation {
-        --gap: clamp(0.5rem, 5vw, 3rem);
-        padding-block: 1rem;
-        padding-inline: clamp(1rem, 5vw, 10rem);
+        --gap: clamp(0.5rem, 3.5vw, 8rem);
+        padding-block: 0.5rem;
+        padding-inline: clamp(0.5rem, 2vw, 10rem);
+        align-items: center;
+    }
+
+    .primary-navigation a {
+        font-size: clamp(1rem, 2vw, 3rem);
     }
 }
 
